<resources>
    <!--XML files-->
    <string name="app_name">Dluhy</string>
    <string name="title_activity_main">Dluhy</string>
    <string name="list_names">List of Names</string>
    <string name="add_person">Add person</string>
    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="calendar">Calendar</string>
    <string name="notification">Notification</string>
    <string name="sign_out">Sign Out</string>
    <string name="note">Note</string>
    <string name="Money">$</string>
    <string name="check">Check</string>
    <string name="sum">Sum</string>
    <string name="set_alert">Set Alert</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="pay_debt">Pay debt</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_debts">My debts</string>
    <string name="our_debts">Our debts</string>
    <string name="close">Close</string>

    <!--ACTIVITY MESSAGES-->
    <string name="dialog_unsuccessful_registration">Registration was unsuccessful. Check if enetered datas are correct</string>
    <string name="ok">OK</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="firstname_required">First name is required</string>
    <string name="lastname_required">Last name is required</string>
    <string name="log_again">Try to log in again</string>
    <string name="sign_again">Try to sign up again</string>
    <string name="incorrect_email">The email address is badly formatted</string>
    <string name="error_weak_password">The password must have at least 6 characters</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_user_exists">The user already exists</string>
    <string name="friend_added">Added new friend</string>
    <string name="friend_not_added">User is already a friend</string>
    <string name="not_existing_user">The user does not exist</string>
    <string name="alert_dialog_delete_friend">Do you want to delete this friend and all debts created with them?</string>
    <string name="alert_dialog_delete_debt">Do you want to delete this debt?</string>
    <string name="adding_curUsers_email">You cannot add yourself as a friend</string>
    <string name="uncompleted_fields">You must complete input fields</string>
    <string name="no_friends">You have no friends</string>
    <string name="back_pressed_more_times">If you press back again you will exit the app</string>
    <string name="no_connection">You are not connected to wifi, data will not be loaded</string>
    <string name="connecting">Connecting to wifi</string>
    <string name="log_no_connection">You cannot sign in without wifi connection</string>

    <!--NOTIFICATIONS-->
    <string name="title">Title</string>
    <string name="content">Content</string>

</resources>
