<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addPerson"
        android:icon="@drawable/ic_add_name"
        android:title="@string/add_person"
        app:showAsAction="always" />
    <item
        android:id="@+id/listNames"
        android:title="@string/list_names"
        android:icon="@drawable/ic_list_of_names"
        app:showAsAction="always" />
    <item
        android:id="@+id/calendar"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"
        app:showAsAction="always"/>
    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_sign_out"
        app:showAsAction="always"/>
</menu>