<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.dominika.dluhy.activities.MainActivity$NewDebt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/pic_margin">

            <ImageView
                android:id="@+id/myPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pic_margin"
                app:srcCompat="@mipmap/ic_launcher" />
            <ImageView
                android:id="@+id/friendsPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pic_margin"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sum">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInput_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:maxLines="1"/>


        </android.support.design.widget.TextInputLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/reLayoutDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_alert">
            <Button
                android:id="@+id/expandableButton_alert"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#5baaaaaa"
                android:paddingRight="8dp"
                android:text="@string/set_alert"
                android:drawableLeft="@drawable/ic_add_alert"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                android:paddingLeft="8dp"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayoutAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableButton_alert"
                android:background="#00ffffff"
                app:ael_duration="300"
                app:ael_expanded="false"
                app:ael_interpolator="accelerateDecelerate"
                app:ael_orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textLayoutDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/set_date">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textLayoutTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/set_time"
                    android:layout_below="@+id/textLayoutDate">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>
